# uvmmc

./: manifest.mf
cis-afn-cra-ml-wfs/: .pre-commit-config.yaml  LICENSE  Makefile  README.md  deploy-config.json  docker-compose.yaml  pyproject.toml
cis-afn-cra-ml-wfs/.github/workflows/: OSS2-deploy.yml  dev-deploy.yaml  images-build-scan.yml  prod-deply.yaml  test-deploy.yaml  uat-deploy.yaml
cis-afn-cra-ml-wfs/anaplan_api_updated/: Action.py  ActionParser.py  ActionTask.py  AnaplanAuthentication.py  AnaplanConnection.py  AnaplanResourceFile.py  AnaplanResourceList.py  AuthToken.py  BasicAuthentication.py  CertificateAuthentication.py  ExportParser.py  ExportTask.py  File.py  FileDownload.py  FileUpload.py  ImportParser.py  ImportTask.py  KeystoreManager.py  Model.py  ParameterAction.py  Parser.py  ParserResponse.py  ProcessParser.py  ProcessTask.py  README.md  ResourceParserFactory.py  ResourceParserFile.py  ResourceParserList.py  Resources.py  StreamUpload.py  TaskFactory.py  TaskFactoryGenerator.py  TaskResponse.py  Upload.py  UploadFactory.py  User.py  UserDetails.py  Workspace.py  WorkspaceDetails.py  __init__.py  (+1 more)
cis-afn-cra-ml-wfs/anaplan_api_updated/util/: AnaplanVersion.py
cis-afn-cra-ml-wfs/api/: api.local.Dockerfile  main.py  requirements.txt
cis-afn-cra-ml-wfs/certificates/: 1.key  Sectigo.cert.pem  Sectigo.privatekey.key
cis-afn-cra-ml-wfs/deployments/: entrypoint.sh  redis.conf
cis-afn-cra-ml-wfs/workflows/: classification.py  classification_monthly.py  jobs-new.py  jobs.py  regression.py  requirements.txt  workspace.yaml
(+82 files in other folders)
