[tool.poetry]
name = "cra-ml-wfs"
version = "0.1.0"
description = ""
authors = ["CIS-AFN-ML"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dagster = "^1.7.1"
dagster-webserver = "^1.7.1"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pyarrow = "^15.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pre-commit = "^3.7.0"
pycln = "^2.4.0"
isort = "^5.13.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
notebook = "^7.1.2"
flake8 = "^7.0.0"
poetry-plugin-export = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"